--- a/ProjectML.ipynb
+++ b/ProjectML.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1LD0EeJ529pWU9t2QSaUXgsk5HOz5cDX2",
-      "authorship_tag": "ABX9TyMdP+mSoasL8wtIXuU0nS4O",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOTQdTqn2egFTCD9BHCCJln"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +17,6 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/jigyasaatiwari/Project-Handrawn-Sketch-Recognition/blob/main/ProjectML.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "!pip install gdown"
@@ -37,9 +26,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yDC_FjmoOyoq",
-        "outputId": "86eb44af-eb64-4151-e691-5c45a8573327"
+        "outputId": "87589491-4044-4ddc-e1c9-2972aeeae577"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,9 +75,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fgKu1jacVk3v",
-        "outputId": "5b2a6195-afb9-4819-c966-bffcbc8167aa"
+        "outputId": "5c09b59a-bbbb-4389-bbcc-23a1c50601d0"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,9 +85,9 @@
           "text": [
             "Downloading...\n",
             "From (original): https://drive.google.com/uc?id=1f5pAbU5OdnxMPZxIebUFvJeroOXxbWEZ\n",
-            "From (redirected): https://drive.google.com/uc?id=1f5pAbU5OdnxMPZxIebUFvJeroOXxbWEZ&confirm=t&uuid=2ea61ee7-fbba-4d82-b3cd-694813634a48\n",
+            "From (redirected): https://drive.google.com/uc?id=1f5pAbU5OdnxMPZxIebUFvJeroOXxbWEZ&confirm=t&uuid=030448bd-9703-4030-90c4-d3e54ea68b6b\n",
             "To: /content/sketches_png.zip\n",
-            "100%|██████████| 550M/550M [00:13<00:00, 42.1MB/s]\n"
+            "100%|██████████| 550M/550M [00:10<00:00, 53.2MB/s]\n"
           ]
         }
       ]
@@ -160,9 +149,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "R5_5UUXvcLwO",
-        "outputId": "71f0e58c-0cf4-4151-e109-ab4a05386f83"
+        "outputId": "05cf643b-e3f0-48bf-cac4-b738b1acee42"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,6 +162,52 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import cv2\n",
+        "import numpy as np\n",
+        "\n",
+        "def enhance_contrast(image):\n",
+        "    \"\"\"Apply Histogram Equalization to enhance contrast.\"\"\"\n",
+        "    return cv2.equalizeHist((image * 255).astype(np.uint8))  # Convert back to 8-bit\n",
+        "\n",
+        "# Apply contrast enhancement to training and testing images\n",
+        "contrast_X_train = np.array([enhance_contrast(img) for img in X_train])\n",
+        "contrast_X_test = np.array([enhance_contrast(img) for img in X_test])\n",
+        "\n",
+        "# Normalize again\n",
+        "contrast_X_train = contrast_X_train / 255.0\n",
+        "contrast_X_test = contrast_X_test / 255.0\n"
+      ],
+      "metadata": {
+        "id": "cUewBc9zmfRC"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def denoise_image(image):\n",
+        "    \"\"\"Apply Median Blur to remove noise while preserving edges.\"\"\"\n",
+        "    return cv2.medianBlur((image * 255).astype(np.uint8), 3)  # Convert back to 8-bit before blurring\n",
+        "\n",
+        "# Apply denoising to training and testing images\n",
+        "denoised_X_train = np.array([denoise_image(img) for img in contrast_X_train])\n",
+        "denoised_X_test = np.array([denoise_image(img) for img in contrast_X_test])\n",
+        "\n",
+        "# Normalize again\n",
+        "denoised_X_train = denoised_X_train / 255.0\n",
+        "denoised_X_test = denoised_X_test / 255.0\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "PiYiZ0wPmfuY"
+      },
+      "execution_count": 7,
+      "outputs": []
     }
   ]
 }
